--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -7,10 +6,10 @@
   <title>Codeando</title>
   <style>
     :root {
-      --bg: #111;                /* fondo principal */
-      --fg: #eee;                /* texto claro */
-      --primary: #00AAFF;        /* azul acento */
-      --muted: #666;             /* texto secundario */
+      --bg: #111;
+      --fg: #eee;
+      --primary: #00AAFF;
+      --muted: #666;
     }
     * { box-sizing: border-box; margin: 0; padding: 0; }
 
@@ -28,14 +27,8 @@
       padding: 1rem 0;
       text-align: center;
     }
-    header h1 {
-      color: var(--bg);
-      font-size: 1.8rem;
-      letter-spacing: 1px;
-    }
-    nav {
-      margin-top: 0.5rem;
-    }
+    header h1 { color: var(--bg); font-size: 1.8rem; }
+    nav { margin-top: 0.5rem; }
     nav a {
       color: var(--bg);
       margin: 0 1rem;
@@ -43,9 +36,7 @@
       font-weight: 500;
       transition: opacity 0.2s;
     }
-    nav a:hover {
-      opacity: 0.7;
-    }
+    nav a:hover { opacity: 0.7; }
 
     main {
       flex: 1;
@@ -65,23 +56,16 @@
       margin-bottom: 1rem;
     }
 
-    section + section {
-      margin-top: 2.5rem;
-    }
-
+    section + section { margin-top: 2.5rem; }
     section h2 {
       color: var(--primary);
       font-size: 1.3rem;
       margin-bottom: 0.75rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 0.5rem;
     }
 
-    /* Ajuste responsivo del embed */
-    .tiktok-embed {
-      width: 100% !important;
+    .tiktok-embed,
+    iframe {
+      width: 100%;
       max-width: 360px;
       margin: 0 auto 1rem;
     }
@@ -113,6 +97,12 @@
       color: var(--muted);
       background: #141414;
     }
+    footer nav a {
+      margin: 0 .5rem;
+      color: var(--muted);
+      font-size: .8rem;
+    }
+    footer nav a:hover { color: var(--primary); }
   </style>
   <script src="https://www.tiktok.com/embed.js"></script>
 </head>
@@ -128,7 +118,6 @@
   </header>
 
   <main>
-    <!-- Sección Acerca -->
     <section id="acerca">
       <img
         src="https://avatars.githubusercontent.com/u/22210107?v=4"
@@ -139,7 +128,6 @@
       <p>Experimento programando y ofrezco asesorías personalizadas en Python, C++, .NET y más.</p>
     </section>
 
-    <!-- Sección Video -->
     <section id="videos">
       <h2>🎬 Mi video más visto</h2>
       <iframe
@@ -149,10 +137,8 @@
         frameborder="0"
         allowfullscreen
       ></iframe>
-      
     </section>
 
-    <!-- Sección Contacto -->
     <section id="contacto">
       <h2>🔗 ¡Conéctate!</h2>
       <div class="buttons">
@@ -165,7 +151,11 @@
   </main>
 
   <footer>
-    © 2025 codeando.dev — Creado con ❤️
+    <nav>
+      <a href="terms.html" target="_blank">Términos de Servicio</a>·
+      <a href="privacy.html" target="_blank">Política de Privacidad</a>
+    </nav>
+    <div>© 2025 codeando.dev — Creado con ❤️</div>
   </footer>
 
 </body>
