--- a/privacy.html
+++ b/privacy.html
@@ -20,7 +20,7 @@
   <h2>2. Uso de cookies</h2>
   <p>Este sitio usa cookies para mejorar la experiencia de usuario. No compartimos datos con terceros.</p>
   <h2>3. Derecho de acceso</h2>
-  <p>Puedes solicitar la eliminación de tus datos contactándonos en <a href="mailto:contacto@codeando.dev">contacto@codeando.dev</a>.</p>
+  <p>Puedes solicitar la eliminación de tus datos contactándonos en <a href="mailto:codeandodev@gmail.com">contacto@codeando.dev</a>.</p>
   <!-- … completa con lo que aplique a tu proyecto … -->
 </body>
 </html>
